# Compiler

./: Dockerfile  README.md  numbers.txt  pyproject.toml
src/: __init__.py  main.py  utils.py
