[tool.poetry]
name = "compiler"
version = "0.1.0"
description = "a mini-compiler to approximate sum of two decimal numbers using Qiskit"
authors = ["aswanth.k"]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.43.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
